Correctly connect otel-collector to tempo

--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -1,1 +1,5 @@
+spring.application.name=otel-playground-service
+management.tracing.sampling.probability=1.0
+managememt.otlp.tracing.endpoint=localhost:4318/v1/traces
 
+logging.level.io.micrometer=DEBUG
