--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 version: "3"
 services:
   otel-playground-service:
+    container_name: otel-playground-service
     image: ben/otel-playground-service:latest
     ports:
       - "8080:8080"
@@ -8,14 +9,19 @@ services:
       - OTEL_COLLECTOR_ENDPOINT=otel-collector:4317
 
   otel-collector:
+    container_name: otel-collector
     image: otel/opentelemetry-collector:latest
     volumes:
       - ./otel-collector-config.yaml:/etc/otel-collector-config.yaml
     command: ["--config=/etc/otel-collector-config.yaml"]
     ports:
       - "4317"  # otlp grpc
+      - "4318:4318"  # otlp http
+    depends_on:
+      - tempo
 
   tempo:
+    container_name: tempo
     image: grafana/tempo:latest
     command: [ "-config.file=/etc/tempo.yaml"]
     volumes:
@@ -24,9 +30,10 @@ services:
     ports:
       - "3200"   # tempo
       - "9095" # tempo grpc
-      - "4317"  # otlp grpc
+      - "4317:4317"  # otlp grpc
 
   grafana:
+    container_name: grafana
     image: grafana/grafana-enterprise:10.3.0
     volumes:
       - ./grafana.yaml:/etc/grafana/provisioning/datasources/datasources.yaml
