--- a/otel-collector-config.yaml
+++ b/otel-collector-config.yaml
@@ -8,8 +8,10 @@ exporters:
     endpoint: tempo:4317
     tls:
       insecure: true
+  debug:
+    verbosity: detailed
 service:
   pipelines:
     traces:
       receivers: [otlp]
-      exporters: [otlp]
+      exporters: [otlp,debug]
