--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=otel-playground-service
 management.tracing.sampling.probability=1.0
-managememt.otlp.tracing.endpoint=localhost:4318/v1/traces
-
-logging.level.io.micrometer=DEBUG
+management.tracing.enabled=true
+management.otlp.tracing.endpoint=http://localhost:4318/v1/traces
+management.endpoints.web.exposure.include=*
